--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Doozadesk</title>
+  <meta name="description" content="Doozadesk is the all-in-one customer support platform with AI agents, unified inbox, and omnichannel support. Scale your support without scaling headcount." />
+  <meta name="keywords" content="customer support, AI support agents, helpdesk software, omnichannel support, customer service automation" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <title>Doozadesk - AI-Powered Customer Support Platform</title>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=AW-10872232955"></script>
   <script>
